basic html test 2.0

--- a/messenger/messenger.html
+++ b/messenger/messenger.html
@@ -9,6 +9,8 @@
 
       <p id="demo">JavaScript can change HTML content.</p>
 
-      <button type="button" onclick='changeText()'>Click Me!</button>
+      <button type="button" onclick='changeText()'>Aktualisieren</button>
+      <button type="button" onclick='hide()'>Click to hide text</button>
+      <button type="button" onclick='show()'>Click to show text</button>
     </body>
 </html>
