--- a/messenger/messenger.html
+++ b/messenger/messenger.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Messenger</title>
-    <script src="messenger.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Titel-Tag</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/messenger.css" rel="stylesheet">
   </head>
-    <body>
-      <h2 id="heading">What Can JavaScript Do?</h2>
+  <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Messenger</a>
+        <p>Menü</p>
+      </div>
+    </nav>
 
-      <p id="demo">JavaScript can change HTML content.</p>
+    <div class="container-fluid">
+       <div class="row">
+         <div class="col-md-8">
+           <h1>Willkommen!!</h1>
+           <p>Neue Mails</p>
+           <button type="button" class="btn btn-success">Mails</button>
+         </div>
+         <div class="col-md-4">
+           <p>Mails von ...</p>
+         </div>
+       </div>
+       <p class="text-right"><a href="impressum.html">Impressum</a></p>
+     </div>
+    </div>
 
-      <button type="button" onclick='changeText()'>Aktualisieren</button>
-      <button type="button" onclick='hide()'>Click to hide text</button>
-      <button type="button" onclick='show()'>Click to show text</button>
-    </body>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
