--- a/messenger/messenger.html
+++ b/messenger/messenger.html
@@ -23,7 +23,7 @@
          <div class="col-md-8">
            <h1>Willkommen!!</h1>
            <p>Neue Mails</p>
-           <button type="button" class="btn btn-success">Mails</button>
+           <button id="mailSenden" type="button" class="btn btn-success">Mails</button>
          </div>
          <div class="col-md-4">
            <p>Mails von ...</p>
@@ -40,6 +40,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-    <script src="js/script.js"></script>
+    <script src="js/messenger.js"></script>
   </body>
 </html>
